For #5796: fix overflow of titles that are too wide

--- a/form-runner/jvm/src/main/assets/apps/fr/style/form-runner-orbeon.less
+++ b/form-runner/jvm/src/main/assets/apps/fr/style/form-runner-orbeon.less
@@ -345,9 +345,10 @@ body.orbeon { background-color: @frBackground }
             color: @frHeaderColor;
         }
         .nav-list > li > span > .btn-link {
-            padding-top: 3px;
-            padding-bottom: 3px;
             margin-bottom: 0;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            padding: 3px 0;
         }
     }
 
